# imagetranslaterAI

./: .env.example  .gitignore  README.md  app.py  backend_api.py  pyproject.toml  verify_ocr.py  verify_pipeline.py
src/imagetranslaterai/: __init__.py  inpainter.py  ocr_debug_snippet.py  ocr_engine.py  renderer.py  translator.py  utils.py
